# aegir

./: .gitignore  LICENSE  README.md  dev-requirments.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: lint.yml  release.yml
aegir/: __init__.py  _registry.py  constructors.py  entry.py  exceptions.py  file.py
bootstrap/: config.py
docs/: conf.py  index.rst  intro.rst  reference.rst
smartconfig/: __init__.py  _registry.py  config.py  config_files.py  configuration.py  constructors.py  entry.py  exceptions.py  file.py  parser.py  register.py  typehints.py
