[tool.flit.metadata]
module = "aegir"
author = "Amber Bertucci"
author-email = "amber@akarys.me"
home-page = "https://github.com/akarys42/aegir"
description-file = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
requires = ["PyYAML ~= 5.3"]

[tool.flit.metadata.requires-extra]
dev = [
    "flake8 ~= 3.8",
    "flake8-annotations ~= 2.0",
    "flake8-bugbear ~= 20.1",
    "flake8-docstrings ~= 1.4",
    "flake8-import-order ~= 0.18",
    "flake8-string-format ~= 0.2",
    "flake8-tidy-imports ~= 4.0",
    "flake8-todo ~= 0.7",
    "pep8-naming ~= 0.9",
    "black ~= 22.1",
]

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"